--- a/task-manager/src/styles/Task.css
+++ b/task-manager/src/styles/Task.css
@@ -6,11 +6,15 @@
 }
 
 .task {
+  display: flex;
+  justify-content: space-between;
   list-style-type: none;
 }
 
 .task label {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .task label {
@@ -23,4 +27,10 @@
     font-size: 1.25rem;
     color: #112d4e;
   }
+}
+
+.task-icons img {
+  cursor: pointer;
+  transform: scale(0.75);
+  margin: 0 0.5rem;
 }
