--- a/task-manager/src/styles/Task.css
+++ b/task-manager/src/styles/Task.css
@@ -17,10 +17,19 @@
   align-items: center;
 }
 
+.task-checked {
+  background-color: #d6efd8;
+}
+
 .task label {
   input[type="checkbox"] {
     transform: scale(1.25);
     margin-right: 1rem;
+  }
+
+  input[type="checkbox"]:checked + p {
+    color: #3f72af;
+    text-decoration: line-through;
   }
 
   p {
