--- a/task-manager/src/styles/TaskDetail.css
+++ b/task-manager/src/styles/TaskDetail.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
 
-  margin: 1rem 0 0.5rem 2rem;
+  margin: 1rem 0 0 2rem;
   padding: 1rem 0;
 }
 
@@ -41,4 +41,26 @@
 .incomplete {
   color: #d91656;
   font-weight: 600;
+}
+.view-task-error {
+  font-size: 1.5rem;
+  margin-bottom: 0.25rem;
+  font-weight: 400;
+  text-align: center;
+  color: #112d4e;
+}
+
+.back-button-container {
+  display: flex;
+  justify-content: right;
+}
+.back-button-container button {
+  outline: none;
+  border: none;
+  padding: 0.5rem 0;
+  width: 10rem;
+  border-radius: 0.5rem;
+  background-color: #3f72af;
+  color: #fff;
+  cursor: pointer;
 }
