--- a/task-manager/src/styles/Modal.css
+++ b/task-manager/src/styles/Modal.css
@@ -8,13 +8,12 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  /* z-index: 1000; */
 }
 
 .modal {
   background-color: #f9f7f7;
   border-radius: 0.5rem;
-  width: 50rem;
+  width: 30rem;
   padding: 2rem;
 }
 
@@ -32,10 +31,6 @@
   background-color: #3f72af;
 }
 
-.btn-cancel {
-  background-color: #d91656;
-}
-
 .close {
   cursor: pointer;
 }
@@ -43,7 +38,9 @@
 .modal-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 2rem;
+  color: #112d4e;
 }
 
 .modal-content {
