feat: Home + TaskList + Task components

--- a/task-manager/src/styles/Task.css
+++ b/task-manager/src/styles/Task.css
@@ -43,3 +43,11 @@
   transform: scale(0.75);
   margin: 0 0.5rem;
 }
+
+@media screen and (max-width: 480px) {
+  .task label {
+    p {
+      font-size: 1.1rem;
+    }
+  }
+}
