--- a/task-manager/src/App.css
+++ b/task-manager/src/App.css
@@ -1,6 +1,6 @@
 .header {
   margin: 2rem 0 0.5rem 2rem;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   color: #112d4e;
   border-bottom: 2px solid #3f72af;
 }
@@ -8,11 +8,23 @@
 .new-task-button {
   outline: none;
   border: none;
-  margin: 1rem 0 0 2rem;
+  margin: 0.5rem 0 0 2rem;
   padding: 0.5rem 0;
   width: 10rem;
   border-radius: 0.5rem;
   background-color: #3f72af;
   color: #fff;
   cursor: pointer;
+}
+
+@media screen and (max-width: 480px) {
+  .header {
+    text-align: center;
+    padding: 1rem 0 0.25rem 0;
+  }
+
+  .new-task-button {
+    display: block;
+    margin: 1rem auto;
+  }
 }
