--- a/task-manager/src/styles/Modal.css
+++ b/task-manager/src/styles/Modal.css
@@ -40,14 +40,28 @@
   justify-content: space-between;
   align-items: center;
   font-size: 2rem;
+  border-bottom: 0.5px solid #112d4e;
   color: #112d4e;
 }
 
 .modal-content {
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 .modal-footer {
   display: flex;
   justify-content: flex-end;
+}
+
+@media screen and (max-width: 480px) {
+  .modal {
+    width: 20rem;
+    padding: 1rem;
+  }
+  .modal-header {
+    font-size: 1.25rem;
+  }
+  .modal-content {
+    margin-bottom: 1rem;
+  }
 }
